# test-proj-hs

./: CHANGELOG.md  README.md  hw-spreadsheet.cabal
app/: Command.hs  Main.hs
src/: Interpreters.hs
src/Data/: AppView.hs  Direction.hs  Spreadsheet.hs
src/Data/Functor/: Dialects.hs  Fix.hs
src/Handle/: App.hs  Focused.hs  Position.hs  Spreadsheet.hs
