cabal-version:      2.4
name:               hw-spreadsheet
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             TurtlePU
maintainer:         sokolov.p64@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hw-spreadsheet
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Command

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, hw-spreadsheet, mtl
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules:
      Data.Functor.Dialects
      , Data.AppView
      , Data.Direction
      , Data.Spreadsheet
      , Handle.App
      , Handle.Focused
      , Handle.Position
      , Handle.Spreadsheet
      , Interpreters
    build-depends:
      base ^>=4.16
      , deriving-compat
      , free
      , array
      , mtl ^>=2.3.1
      , pretty
    hs-source-dirs:   src
    default-language: Haskell2010
